opam-version: "2.0"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["David Sheets" "Thomas Gazagnaire"]
homepage:     "https://github.com/mirage/ocaml-fsevents"
bug-reports:  "https://github.com/mirage/ocaml-fsevents/issues"
dev-repo:     "git+https://github.com/mirage/ocaml-fsevents.git"
doc:          "https://mirage.github.io/ocaml-fsevents/"
license:      "ISC"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {>= "1.1"}
  "ctypes" {>= "0.4.0"}
  "cf" {>= "0.3.0"}
]

available: [os = "macos"]

pin-depends: [
  ["cf.dev" "git+https://github.com/mirage/ocaml-cf.git"]
]

synopsis: """
OCaml bindings to MacOS FSEvents
"""
description: """
This package relies on
[cf](https://github.com/mirage/ocaml-cf) for CoreFoundation
support. These bindings use
[ctypes](https://github.com/ocamllabs/ocaml-ctypes) for type-safe stub
generation.
"""
