;; generated detect.c

(library
  (name      types)
  (libraries ctypes.stubs cf)
  (modules   types))

(executable
  (name      typegen)
  (libraries ctypes.stubs ctypes.foreign types)
  (modules   typegen))

(rule
  (targets detect.c)
  (deps    typegen.exe)
  (action  (run %{deps})))

;; generate types_detected.ml

(rule
  (targets detect.exe)
  (deps    detect.c)
  (action
    (run %{cc} -I %{ocaml_where} -I %{lib:ctypes:} -o %{targets} %{deps})))

(rule
  (targets types_detected.ml)
  (deps    detect.exe)
  (action  (with-stdout-to %{targets}
    (progn
      (echo "[@@@ warning \"-27-9\"]\n\n")
      (run %{deps})))))

;; generate fevents_stubs.c and generated.ml

(executable
  (name      bindgen)
  (libraries ctypes.stubs ctypes.foreign types)
  (modules   bindgen bindings types_detected))

(rule
  (targets fsevents_stubs.c generated.ml)
  (deps    bindgen.exe)
  (action  (run %{deps})))
