(library
 (name fsevents_stubs)
 (libraries cf)
 (enabled_if
  (= %{system} macosx))
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name fsevents)
  (build_flags_resolver
   (vendored
    (c_flags :standard)
    (c_library_flags :standard -framework CoreServices)))
  (headers
   (include "CoreServices/CoreServices.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
